--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hi, Emily. Can you see this?</h1>
-<p>P.S. Chester says Hi</p>
+<h1>Bo J. Anderson</h1>
+<p>A Business Intelligence Professional</p>
 </body>
 </html>
