--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Bo J. Anderson</h1>
 <p>A Business Intelligence Professional</p>
+<a href="https://github.com/bojanderson/bojanderson.github.io">The repository for this site</a>
+
+<img src="Headshot.jpg" alt="Picture" width="100" height="150">
 </body>
 </html>
