--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <p>A Business Intelligence Professional</p>
 <a href="https://github.com/bojanderson/bojanderson.github.io">The repository for this site</a>
 
-<img src="Headshot.jpg" alt="Picture" width="100" height="150">
+<img src="images/headshot.jpg" alt="Picture" width="100" height="150">
 </body>
 </html>
