Made a list of repositories

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <body>
 <h1>Bo J. Anderson</h1>
 <p>A Business Intelligence Professional</p>
-<a href="https://github.com/bojanderson/bojanderson.github.io">The repository for this site</a>
+
 
 <img src="images/headshot.jpg" alt="Picture" width="100" height="150">
+
+<button>Click me</button>
+
+<ul>
+    <li><a href="https://github.com/bojanderson/bojanderson.github.io">The repository for this site</a></li>
+    <li>Tea</li>
+    <li>Milk</li>
+  </ul>
+
 </body>
 </html>
