Added a Language attribute

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 <body>
 <h1>Bo J. Anderson</h1>
 <p>A Business Intelligence Professional</p>
@@ -11,8 +11,8 @@
 
 <ul>
     <li><a href="https://github.com/bojanderson/bojanderson.github.io">The repository for this site</a></li>
-    <li>Tea</li>
-    <li>Milk</li>
+    <li><a href="https://github.com/bojanderson/bojanderson.github.io">DBA Scripts</a></li>
+    <li><a href="https://github.com/bojanderson/bojanderson.github.io">Other Stuff</a></li>
   </ul>
 
 </body>
