Added button as a test

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <body>
 <h1>Bo J. Anderson</h1>
-<p>A Business Intelligence Professional</p>
+<p title="Who I am:">  A Business Intelligence Professional</p>
 
 
 <img src="images/headshot.jpg" alt="Picture" width="100" height="150">
