Added GitHub links and then added link to Stack Overflow

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <button>Click me</button>
 
 <ul>
-    <li><a href="https://github.com/bojanderson/bojanderson.github.io">The repository for this site</a></li>
-    <li><a href="https://github.com/bojanderson/bojanderson.github.io">DBA Scripts</a></li>
-    <li><a href="https://github.com/bojanderson/bojanderson.github.io">Other Stuff</a></li>
+    <li><a href="https://github.com/bojanderson/bojanderson.github.io">GitHub repository for this site</a></li>
+    <li><a href="https://github.com/bojanderson/DBA-Scripts">GitHub repository for DBA Scripts</a></li>
+    <li><a href="https://github.com/bojanderson/BI-Resources">GitHub repository for BI Resources</a></li>
+    <li><a href="https://stackoverflow.com/story/bojanderson">Stack Overflow Profile</a></li>
   </ul>
 
 </body>
