Added line breaks and then reorganized the links

--- a/index.html
+++ b/index.html
@@ -7,14 +7,21 @@
 
 <img src="images/headshot.jpg" alt="Picture" width="100" height="150">
 
+<hr>
+
 <button>Click me</button>
 
+<hr>
+
 <ul>
-    <li><a href="https://github.com/bojanderson/bojanderson.github.io">GitHub repository for this site</a></li>
-    <li><a href="https://github.com/bojanderson/DBA-Scripts">GitHub repository for DBA Scripts</a></li>
-    <li><a href="https://github.com/bojanderson/BI-Resources">GitHub repository for BI Resources</a></li>
-    <li><a href="https://stackoverflow.com/story/bojanderson">Stack Overflow Profile</a></li>
+  <li>GitHub Repositories</li>
+  <ul>
+    <li><a href="https://github.com/bojanderson/bojanderson.github.io">This site</a></li>
+    <li><a href="https://github.com/bojanderson/DBA-Scripts">DBA Scripts</a></li>
+    <li><a href="https://github.com/bojanderson/BI-Resources">BI Resources</a></li>
   </ul>
+  <li><a href="https://stackoverflow.com/story/bojanderson">Stack Overflow Profile</a></li>
+</ul>
 
 </body>
 </html>
