Cleaned up some things, like resizing picture, and adding a note that this a work in process

--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en-US">
 <body>
 <h1>Bo J. Anderson</h1>
-<p title="Who I am:">  A Business Intelligence Professional</p>
+<h3 title="Who I am:">  A Business Intelligence Professional</h3>
 
+<p>If you haven't realized yet, this site is a work in progress as I go through a <a href="https://www.w3schools.com/html/">HTML tutorial</a></p>
 
-<img src="images/headshot.jpg" alt="Picture" width="100" height="150">
-
-<hr>
-
-<button>Click me</button>
+<img src="images/headshot.jpg" alt="Picture">
 
 <hr>
 
+<button>This does nothing</button>
+
+<hr>
+
+<h4>
+  Links
+</h4>
 <ul>
   <li>GitHub Repositories</li>
   <ul>
