Added head section

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
+<head>
+  <title>Bo J. Anderson - Professional Page</title>
+  <meta charset="UTF-8">
+</head>
+
 <body>
 <h1>Bo J. Anderson</h1>
-<h3 title="Who I am:">  A Business Intelligence Professional</h3>
+<h3 title="Who I am:" style="font-size:15px;">  A Business Intelligence Professional</h3>
 
 <p>If you haven't realized yet, this site is a work in progress as I go through a <a href="https://www.w3schools.com/html/">HTML tutorial</a></p>
 
