adding CSS Style Attributes

--- a/index.html
+++ b/index.html
@@ -4,22 +4,31 @@
 <head>
   <title>Bo J. Anderson - Professional Page</title>
   <meta charset="UTF-8">
-  
+
 </head>
 
-<body>
+<body style="background-color:brown">
 <h1>Bo J. Anderson</h1>
 <h3 title="Who I am:" style="font-size:15px;">  A Business Intelligence Professional</h3>
 
 <p>If you haven't realized yet, this site is a work in progress as I go through a <a href="https://www.w3schools.com/html/">HTML tutorial</a></p>
 
+<p>I am  Business Intelligence Professional with a lot of experience with SQL, however I'd like to know more about web programming so I am doing a HTML tutorial and using a professional site for myself as a use case.</p>
+
+<pre style="color:powderblue">
+Roses are red
+Violets are blue
+I'm watching Impractical Jokers
+and you should too
+</pre>
+
 <img src="images/headshot.jpg" alt="Picture">
 
-<hr>
+<br>
 
 <button>This does nothing</button>
 
-<hr>
+<br>
 
 <h4>
   Links
@@ -33,6 +42,10 @@
   </ul>
   <li><a href="https://stackoverflow.com/story/bojanderson">Stack Overflow Profile</a></li>
 </ul>
+
+<br>
+
+<p>Last Updated: 2020-02-10</p>
 
 </body>
 </html>
