--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<body style="background-color:brown">
+<body style="background-color:brown;">
 <h1>Bo J. Anderson</h1>
 <h3 title="Who I am:" style="font-size:15px;">  A Business Intelligence Professional</h3>
 
@@ -15,7 +15,7 @@
 
 <p>I am  Business Intelligence Professional with a lot of experience with SQL, however I'd like to know more about web programming so I am doing a HTML tutorial and using a professional site for myself as a use case.</p>
 
-<pre style="color:powderblue">
+<pre style="color:powderblue;font-family:fantasy;font-size: 12px;">
 Roses are red
 Violets are blue
 I'm watching Impractical Jokers
@@ -30,7 +30,7 @@ and you should too
 
 <br>
 
-<h4>
+<h4 style="background-color:green;font-family:cursive">
   Links
 </h4>
 <ul>
