Centered some text headdings

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
 
 <head>
-  <title>Bo J. Anderson - Professional Page</title>
+  <title >Bo J. Anderson - Professional Page</title>
   <meta charset="UTF-8">
 
 </head>
 
 <body style="background-color:brown;">
-<h1>Bo J. Anderson</h1>
-<h3 title="Who I am:" style="font-size:15px;">  A Business Intelligence Professional</h3>
+<h1 style="text-align: center;">Bo J. Anderson</h1>
+<h3 title="Who I am:" style="font-size:15px;text-align: center;">  A Business Intelligence Professional</h3>
 
 <p>If you haven't realized yet, this site is a work in progress as I go through a <a href="https://www.w3schools.com/html/">HTML tutorial</a></p>
 
@@ -30,7 +30,7 @@ and you should too
 
 <br>
 
-<h4 style="background-color:green;font-family:cursive">
+<h4 style="background-color:green;font-family:cursive;text-align: center;">
   Links
 </h4>
 <ul>
