A bunch of random changes, I'm up to https://www.w3schools.com/html/html_quotation_elements.asp

--- a/index.html
+++ b/index.html
@@ -9,18 +9,33 @@
 
 <body style="background-color:brown;">
 <h1 style="text-align: center;">Bo J. Anderson</h1>
+<hr>
 <h3 title="Who I am:" style="font-size:15px;text-align: center;">  A Business Intelligence Professional</h3>
+<hr>
 
-<p>If you haven't realized yet, this site is a work in progress as I go through a <a href="https://www.w3schools.com/html/">HTML tutorial</a></p>
 
-<p>I am  Business Intelligence Professional with a lot of experience with SQL, however I'd like to know more about web programming so I am doing a HTML tutorial and using a professional site for myself as a use case.</p>
+<p><b>If you haven't realized yet, this site is a work in progress as I go through a <a href="https://www.w3schools.com/html/"><abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial</a></b></p>
+
+<p><strong>Charlie Brown</strong></p>
+<i>Working</i>
+
+<p>I am  Business Intelligence Professional with a lot of experience with <abbr title="Structured Query Language">SQL</abbr>, however I'd like to know more about web programming so I am doing a <abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial and using a professional site for myself as a use case.</p>
 
 <pre style="color:powderblue;font-family:fantasy;font-size: 12px;">
+
+<cite>A Pretty Poem</cite>
+
 Roses are red
-Violets are blue
-I'm watching Impractical Jokers
+<del>Test</del> Violets are blue
+<ins>Test</ins> I'm watching Impractical Jokers
 and you should too
 </pre>
+
+<bdo dir="rtl">
+Why would you do this?
+</bdo>
+<br>
+<p>R<sup>2</sup></p>
 
 <img src="images/headshot.jpg" alt="Picture">
 
@@ -44,6 +59,13 @@ and you should too
 </ul>
 
 <br>
+
+<address>
+Created by Bo Anderson<br>
+Visit me at: <a href="https://bojanderson.github.io">bojanderson.github.io</a><br>
+110 N Ankeny Blvd #200<br>
+Ankeny, IA 50023
+</address>
 
 <p>Last Updated: 2020-02-10</p>
 
