Made some color changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<body style="background-color:brown;">
+<body style="background-color:ivory;">
 <h1 style="text-align: center;">Bo J. Anderson</h1>
 <hr>
 <h3 title="Who I am:" style="font-size:15px;text-align: center;">  A Business Intelligence Professional</h3>
@@ -45,7 +45,9 @@ Why would you do this?
 
 <br>
 
-<h4 style="background-color:green;font-family:cursive;text-align: center;">
+<!--This section is where I am putting links to sites/repositories that show my capablities-->
+
+<h4 style="background-color:dodgerblue;font-family:cursive;text-align:center;color:white;">
   Links
 </h4>
 <ul>
