--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p><strong>Charlie Brown</strong></p>
 <i>Working</i>
 
-<p>I am  Business Intelligence Professional with a lot of experience with <abbr title="Structured Query Language">SQL</abbr>, however I'd like to know more about web programming so I am doing a <abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial and using a professional site for myself as a use case.</p>
+<p style="background-color:tomato;">I am  Business Intelligence Professional with a lot of experience with <abbr title="Structured Query Language">SQL</abbr>, however I'd like to know more about web programming so I am doing a <abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial and using a professional site for myself as a use case.</p>
 
 <pre style="color:powderblue;font-family:fantasy;font-size: 12px;">
 
