--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <title >Bo J. Anderson - Professional Page</title>
   <meta charset="UTF-8">
-
+  <link rel="stylesheet" href="styles.css">
 </head>
 
+
+
 <body style="background-color:ivory;">
-<h1 style="text-align: center;">Bo J. Anderson</h1>
+<h1 style="text-align: center;color:coral;">Bo J. Anderson</h1>
 <hr>
 <h3 title="Who I am:" style="font-size:15px;text-align: center;">  A Business Intelligence Professional</h3>
 <hr>
@@ -20,7 +22,7 @@
 <p><strong>Charlie Brown</strong></p>
 <i>Working</i>
 
-<p style="background-color:tomato;">I am  Business Intelligence Professional with a lot of experience with <abbr title="Structured Query Language">SQL</abbr>, however I'd like to know more about web programming so I am doing a <abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial and using a professional site for myself as a use case.</p>
+<p style="background-color:tomato;border:2px dashed dodgerblue;">I am  Business Intelligence Professional with a lot of experience with <abbr title="Structured Query Language">SQL</abbr>, however I'd like to know more about web programming so I am doing a <abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial and using a professional site for myself as a use case.</p>
 
 <pre style="color:powderblue;font-family:fantasy;font-size: 12px;">
 
@@ -36,7 +38,7 @@ and you should too
 Why would you do this?
 </bdo>
 <br>
-<p>R<sup>2</sup></p>
+<p style="background-color: rgb(255, 99, 71, 0.4);border:3px solid chartreuse">R<sup>2</sup></p>
 
 <img src="images/headshot.jpg" alt="Picture">
 
