Added custom paragraph css styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p><strong>Charlie Brown</strong></p>
 <i>Working</i>
 
-<p style="background-color:tomato;border:2px dashed dodgerblue;">I am  Business Intelligence Professional with a lot of experience with <abbr title="Structured Query Language">SQL</abbr>, however I'd like to know more about web programming so I am doing a <abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial and using a professional site for myself as a use case.</p>
+<p id="p01">I am  Business Intelligence Professional with a lot of experience with <abbr title="Structured Query Language">SQL</abbr>, however I'd like to know more about web programming so I am doing a <abbr title="Hyper-Text Mark-up Language">HTML</abbr> tutorial and using a professional site for myself as a use case.</p>
 
 <pre style="color:powderblue;font-family:fantasy;font-size: 12px;">
 
