--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ I'm watching Impractical Jokers
 and you should too
 </pre>
 
-<img src="images/headshot.jpg" alt="Picture">
+<img src="images/headshot.jpg" alt="A headshot of Bo during his wedding" width="176" height="144">
 
 <br>
 
