--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<body style="background-color:brown;">
+<body style="background-color:#9bddff;">
 <h1 style="text-align: center;">Bo J. Anderson</h1>
 <h3 title="Who I am:" style="font-size:15px;text-align: center;">  A Business Intelligence Professional</h3>
 
@@ -15,14 +15,14 @@
 
 <p>I am  Business Intelligence Professional with a lot of experience with SQL, however I'd like to know more about web programming so I am doing a HTML tutorial and using a professional site for myself as a use case.</p>
 
-<pre style="color:powderblue;font-family:fantasy;font-size: 12px;">
+<pre style="color:red;font-family:fantasy;font-size: 12px;">
 Roses are red
 Violets are blue
 I'm watching Impractical Jokers
 and you should too
 </pre>
 
-<img src="images/headshot.jpg" alt="A headshot of Bo during his wedding" width="176" height="144">
+<img src="images/headshot.jpg" alt="A headshot of Bo during his wedding" width="528" height="432">
 
 <br>
 
@@ -30,7 +30,7 @@ and you should too
 
 <br>
 
-<h4 style="background-color:green;font-family:cursive;text-align: center;">
+<h4 style="background-color:navy;font-family:cursive;text-align: center;color:white;">
   Links
 </h4>
 <ul>
@@ -45,7 +45,7 @@ and you should too
 
 <br>
 
-<p>Last Updated: 2020-02-10</p>
+<p>Last Updated: 2020-10-02</p>
 
 </body>
 </html>
