--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <pre style="color:red;font-family:fantasy;font-size: 12px;">
 Roses are red
-Violets are blue
-I'm watching Impractical Jokers
-and you should too
+Violets are Blue
+The Chiefs are Undefeated
+
 </pre>
 
 <img src="images/headshot.jpg" alt="A headshot of Bo during his wedding" width="528" height="432">
@@ -37,11 +37,16 @@ and you should too
   <li>GitHub Repositories</li>
   <ul>
     <li><a href="https://github.com/bojanderson/bojanderson.github.io">This site</a></li>
-    <li><a href="https://github.com/bojanderson/DBA-Scripts">DBA Scripts</a></li>
-    <li><a href="https://github.com/bojanderson/BI-Resources">BI Resources</a></li>
+    <li><a href="https://github.com/bojanderson/Iowa-COVID-Analysis">Iowa COVID Analysis</a></li>
+    <li><a href="https://github.com/bojanderson/r-DailyProgrammer">r/DailyProgrammer</a></li>
   </ul>
   <li><a href="https://stackoverflow.com/story/bojanderson">Stack Overflow Profile</a></li>
 </ul>
+
+<br>
+
+<script src="https://www.linkedin.com/in/bojanderson/" type="text/javascript">lang: en_US</script>
+    <script type="IN/Share" data-url="https://www.linkedin.com/in/bojanderson/"></script>
 
 <br>
 
