--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title >Bo J. Anderson - Professional Page</title>
   <meta charset="UTF-8">
-
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body style="background-color:#9bddff;">
@@ -17,16 +17,58 @@
 
 <pre style="color:red;font-family:fantasy;font-size: 12px;">
 Roses are red
-Violets are Blue
+Violets are <span class="testclass">blue</span>
 The Chiefs are Undefeated
 
 </pre>
+
+<p>My mother has <span style="color:blue;font-weight:bold">blue</span> eyes and my father has <span style="color:darkolivegreen;font-weight:bold">dark green</span> eyes.</p>
 
 <img src="images/headshot.jpg" alt="A headshot of Bo during his wedding" width="528" height="432">
 
 <br>
 
 <button>This does nothing</button>
+
+<br>
+
+<table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Ernst Handel</td>
+    <td>Roland Mendel</td>
+    <td>Austria</td>
+  </tr>
+  <tr>
+    <td>Island Trading</td>
+    <td>Helen Bennett</td>
+    <td>UK</td>
+  </tr>
+  <tr>
+    <td>Laughing Bacchus Winecellars</td>
+    <td>Yoshi Tannamuri</td>
+    <td>Canada</td>
+  </tr>
+  <tr>
+    <td>Chester</td>
+    <td>Giovanni Rovelli</td>
+    <td>Italy</td>
+  </tr>
+</table>
 
 <br>
 
@@ -42,6 +84,9 @@ The Chiefs are Undefeated
   </ul>
   <li><a href="https://stackoverflow.com/story/bojanderson">Stack Overflow Profile</a></li>
 </ul>
+
+<br>
+
 
 <br>
 
