--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body style="background-color:#9bddff;">
-<h1 style="text-align: center;">Bo J. Anderson</h1>
+<h1 id="Headline">Bo J. Anderson</h1>
 <h3 title="Who I am:" style="font-size:15px;text-align: center;">  A Business Intelligence Professional</h3>
 
 <p>If you haven't realized yet, this site is a work in progress as I go through a <a href="https://www.w3schools.com/html/">HTML tutorial</a></p>
@@ -21,8 +21,6 @@ Violets are <span class="testclass">blue</span>
 The Chiefs are Undefeated
 
 </pre>
-
-<p>My mother has <span style="color:blue;font-weight:bold">blue</span> eyes and my father has <span style="color:darkolivegreen;font-weight:bold">dark green</span> eyes.</p>
 
 <img src="images/headshot.jpg" alt="A headshot of Bo during his wedding" width="528" height="432">
 
